{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 22,
  "lineage": "c78e1760-b062-23d1-e781-3016c2443b64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "tf_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-08bd16c21fc8b89fa",
            "id": "rtb-08bd16c21fc8b89fa",
            "owner_id": "977176859364",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-07505057616cbb620"
          },
          "depends_on": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0019333fe08ca05e7",
            "owner_id": "977176859364",
            "tags": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-07505057616cbb620"
          },
          "depends_on": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ded3ebdf927d9cc2",
            "owner_id": "977176859364",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0019333fe08ca05e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route_table"
            },
            "vpc_id": "vpc-07505057616cbb620"
          },
          "depends_on": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977176859364:subnet/subnet-0c0587edbf914a90d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-0c0587edbf914a90d",
            "map_public_ip_on_launch": false,
            "owner_id": "977176859364",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-07505057616cbb620"
          },
          "depends_on": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977176859364:subnet/subnet-0137263f38939ccc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-0137263f38939ccc5",
            "map_public_ip_on_launch": false,
            "owner_id": "977176859364",
            "tags": {
              "Name": "Public_Subnet_2"
            },
            "vpc_id": "vpc-07505057616cbb620"
          },
          "depends_on": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:977176859364:vpc/vpc-07505057616cbb620",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0ac5d04367c7eff59",
            "default_route_table_id": "rtb-08bd16c21fc8b89fa",
            "default_security_group_id": "sg-04d07669be161cd6c",
            "dhcp_options_id": "dopt-bd8ba1c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07505057616cbb620",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08bd16c21fc8b89fa",
            "owner_id": "977176859364",
            "tags": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}